kubernetes/apps/main/default/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: nextcloud
    gethomepage.dev/group: Personal
    gethomepage.dev/name: Nextcloud
    gethomepage.dev/icon: nextcloud.png
    gethomepage.dev/description: File Hosting
spec:
  hostnames:
    - "nextcloud.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: RegularExpression
            value: /.well-known/(?:card|cal)dav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav/
            statusCode: 301
    - backendRefs:
        - name: nextcloud
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /settings/ajax/checksetup
      timeouts:
        request: 300s
